small spacing fix

--- a/shopping_tool/static/shopping_tool/css/styles.css
+++ b/shopping_tool/static/shopping_tool/css/styles.css
@@ -3575,7 +3575,7 @@ div.collage-controls a.polygon-crop { height: 21px; padding: 3px 6px 3px; width:
 #cropper-btns a:nth-of-type(3) {margin:0;}
 div.collage-controls a#finish-editing-look,
 div.collage-controls a#delete-look-inprocess {float:right; border-radius:5px; border-right:1px solid #ccc; }
-div.collage-controls a#delete-look-inprocess{margin:0 15px 0 35px;}
+div.collage-controls a#delete-look-inprocess{margin:0 10px 0 35px;}
 div.collage-controls a.trash-obj {border-radius:5px; border-right:1px solid #ccc;}
 div.collage-controls a#finish-editing-look i,
 div.collage-controls a#delete-look-inprocess i,
